--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="Scripts/App.js"></script>
+<link rel="stylesheet" href="Style/screen.css">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <main class="c-app js-background">
+<p class="c-app-title">HEX COLOR : <span class="js-color">#123456</span></p>
+            <button class="c-app-button">Change color</button>
+    </main>
 </body>
 </html>
